feat(core): implementing StackgenModelProprty annotation